ajustations HTML correction alignement ln 44 à 49, 52-53 et 57-63

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ header {
 }
 #contact {
     color: rgb(255, 255, 255);
-    background-color: #767da5;
+    background-color: #767da5c4;
     font-size: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(7, 0, 34, 0.459);
